--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ keywords = ["word", "key"]
 python = "^3.8"
 click = "^8.1.3"
 requests = "^2.27.1"
+desert = "^2020.11.18"
+marshmallow = "^3.15.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
